<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvNoPrompts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:gravity="center"
        android:textSize="27sp"
        android:textColor="@color/black"
        android:text="@string/no_prompts" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/bCancelAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/no" />

        <Button
            android:id="@+id/bShowAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/yes" />
    </LinearLayout>
</LinearLayout>