<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="stats"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ibBackToMain"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClickBackToMain"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tvStatisticsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:text="@string/statistics_title" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClickGoToAchievementsScreen"
                app:srcCompat="@drawable/ic_baseline_stars" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:elevation="2dp"
                android:background="@drawable/round_stat_layouts">

                <TextView
                    android:id="@+id/tvGamesPlayedTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:gravity="center"
                    android:text="@string/games_played_title"
                    android:textSize="21sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvGamesPlayedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="37sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:elevation="2dp"
                android:background="@drawable/round_stat_layouts">

                <TextView
                    android:id="@+id/tvGamesWonTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/games_won_title"
                    android:textSize="21sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvGamesWonValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="37sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:elevation="2dp"
                android:background="@drawable/round_stat_layouts">

                <TextView
                    android:id="@+id/tvPercentGamesWonTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:lines="2"
                    android:gravity="center"
                    android:text="@string/percent_games_won_title"
                    android:textSize="21sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvPercentGamesWonValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="37sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:elevation="2dp"
                android:background="@drawable/round_stat_layouts">

                <TextView
                    android:id="@+id/tvPrompts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/prompts_used"
                    android:textSize="21sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvPromptsUsed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="37sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:elevation="2dp"
                android:background="@drawable/round_stat_layouts">

                <TextView
                    android:id="@+id/tvAverageTriesCountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/average_tries_count"
                    android:textSize="21sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvAverageTriesCountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="37sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDistributionOfWinsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="21sp"
                android:text="@string/distribution_of_wins"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="1"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ProgressBar
                        android:id="@+id/pbFirstWordWinsCount"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/correct_textview"
                        android:progressBackgroundTint="@color/white"/>

                    <TextView
                        android:id="@+id/tvFirstProgressBarValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/correct_textview"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="2"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ProgressBar
                        android:id="@+id/pbSecondWordWinsCount"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/correct_textview"
                        android:progressBackgroundTint="@color/white"/>

                    <TextView
                        android:id="@+id/tvSecondProgressBarValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/correct_textview"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="3"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ProgressBar
                        android:id="@+id/pbThirdWordWinsCount"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/correct_textview"
                        android:progressBackgroundTint="@color/white"/>

                    <TextView
                        android:id="@+id/tvThirdProgressBarValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/correct_textview"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="4"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ProgressBar
                        android:id="@+id/pbFourthWordWinsCount"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/correct_textview"
                        android:progressBackgroundTint="@color/white"/>

                    <TextView
                        android:id="@+id/tvFourthProgressBarValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/correct_textview"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="5"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ProgressBar
                        android:id="@+id/pbFifthWordWinsCount"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/correct_textview"
                        android:progressBackgroundTint="@color/white"/>

                    <TextView
                        android:id="@+id/tvFifthProgressBarValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/correct_textview"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="6"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ProgressBar
                        android:id="@+id/pbSixthWordWinsCount"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/correct_textview"
                        android:progressBackgroundTint="@color/white"/>

                    <TextView
                        android:id="@+id/tvSixthProgressBarValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/correct_textview"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>